Fix overflow of photos

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,6 +19,7 @@ body {
   box-sizing: border-box;
   background-color: #fff;
   padding-top: 20px;
+  overflow: hidden;
 }
 
 .button {
@@ -85,6 +86,7 @@ body {
   border-top: 1.5px #333 solid;
   padding-top: 15px;
   color: #a7323f;
+  overflow: hidden;
 }
 
 #main-header {
